--- a/src/routes/About/_about.scss
+++ b/src/routes/About/_about.scss
@@ -1,6 +1,6 @@
 .about {
   position: relative;
-  max-width: 60rem;
+  max-width: $max-width;
   margin: 0 auto;
 
   article {
