--- a/src/routes/Home/_home.scss
+++ b/src/routes/Home/_home.scss
@@ -147,7 +147,7 @@
 
     em {
       position: relative;
-      max-width: 30rem;
+      max-width: $max-width-sm;
       text-style: italic;
       display: block;
       padding-top: 1rem;
