--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -25,3 +25,8 @@ $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
+
+$box-shadow: 0px 10px 20px 2px rgba($black, 0.8);
+
+$max-width: 60rem;
+$max-width-sm: 30rem;
